<resources>
    <string name="app_name">安全巡檢</string>
    <string name="title_back">返回</string>

    <string name="login_pwd_error">账号或密码错误,请重新输入</string>
    <string name="forbid_userId_empty">用户名或密碼不能为空</string>
    <string name="forbid_userPsd_empty">用户名或密碼不能有空格</string>
    <string name="version_update">有版本需要更新</string>
    <string name="net_mistake">網絡錯誤,請檢查</string>
    <string name="multiple_click">不可連續點擊提交按鈕</string>
    <string name="update_confirm">確定要提交嗎</string>

    <string name="route_list">進入巡檢進度表</string>
    <string name="title_route">巡檢進度表</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="loading">加载中……</string>

    <string name="roles_or">您沒有該巡檢權限,請確認!</string>
    <string name="activity_abnormal">異常維護</string>
    <string name="up_abnormal">提交</string>

    <string name="all_image">所有图片</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>
    <string name="preview">预览</string>
    <string name="image">图片</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="title_lastLocation">获取最后一次位置</string>
    <string name="lastLocation">获取最后一次位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>
    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>
    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>
    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>
    <string name="emp_wrong">員工違規登記表</string>
    <string name="emp_turnover">員工進出異常登記表</string>
    <string name="two_wheel_vehicle">二輪車違規登記表</string>
    <string name="industrial_list_null">尚未添加巡檢單位，請點擊右上角添加！</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="app_sname">JPush SDK Demo</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>

</resources>
